Wrap content in main tag

--- a/css/style.css
+++ b/css/style.css
@@ -9,3 +9,10 @@ body {
 	background-repeat: no-repeat;
 	background-size: fill;
 }
+
+main {
+	overflow: auto;
+	height: 100%;
+	display: flex;
+	flex-wrap: wrap;
+}
