--- a/css/fonts/oxanium.css
+++ b/css/fonts/oxanium.css
@@ -1,6 +1,6 @@
 @font-face {
 	font-family: 'Oxanium';
-	src: url('./oxanium.ttf') format('truetype');
+	src: url('./oxanium.woff2') format('woff2-variations');
 	font-weight: 100 900;
 	font-style: normal;
 	font-display: swap;
